--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -16,11 +16,9 @@
               
           </ul>
           <div class="col-md-3 text-end">
-         
-            <form method="POST" action="/search">
+            <form method="POST" action="/blogs/search">
               <input type="search" name="searchTerm" class="form-control" placeholder="Search..." aria-label="Search">
             </form>
-         
-      </div>
+          </div>
   </div>
 </nav><!-- //NAVBAR -->
