--- a/views/blogs/home.ejs
+++ b/views/blogs/home.ejs
@@ -7,29 +7,59 @@
 <body style="background-image:url('/img/i-like-food.svg');">
     <%- include("../partials/navbar") %>
    <div class="container">
-    <div class="row flex-lg-row-reverse align-items-center g-5 py-4 mb-4">
-        <div class="col-12 col-lg-6">
-          <img src="/img/hero-image.png" width="607" height="510" class="d-block mx-lg-auto img-fluid" loading="lazy" alt="Cooking With Node.js"/>
-        </div>
+    <div class="row">
       
-        <div class="col-12 col-lg-6">
-          <h1 class="display-5 fw-bold mb-3">Huge selection of delicios recipe ideas</h1>
-          <h3  style="background-color: white;">
-            Explore our huge selection of delicious recipe ideas including; easy desserts, delicious vegan and vegetarian dinner ideas, gorgeous pasta recipes, quick bakes, family-friendly meals and gluten-free recipes.
+      
+        <div class="col col-xl-6 col-lg-6 col-md-12  col-12 col-sm-12 mt-5" style="text-align: center;">
+          <h1 class="display-4 fw-bold mb-4 mt-5">Delicious recipies ideas</h1>
+          <h3  style="background-color: white;">    
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas eius quam ratione alias eveniet tenetur vitae rem fugiat! Amet nulla corrupti quos voluptatem nemo consectetur saepe ducimus modi aut officia.
           </h3>
-      
-          <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a href="/" class="btn btn-primary btn-dark btn-lg px-4 me-md-2">Explore Recipies</a>
-          </div>
-      
+            <a href="/" class="btn btn-dark p-4">Explore Recipies</a>
         </div>
+        <div class="col col-xl-6 col-lg-6 col-md-12  col-12 col-sm-12 mt-4 mb-5" style="text-align:center;">
+          <img src="/img/food.jpg" width="607" height="510" class="img-fluid" loading="lazy" alt="Cooking With Node.js"/>
+        </div>
+      </div>
+      <h1 class="display-4 fw-bold mb-4 mt-5">FIVE MOST RECENT RECIPIES</h1>
+      <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+        <% blog.forEach(function(blog, index){ %>
       
+          <div class="card mt-4 text-center"  style="width:28rem;margin:10px;">
+         <div class="card-body">
+            <h4 class="card-title"><%= blog.title %></h4>
+            <h4 class="card-title"><%= blog.author %></h4>
+            <div class="card-subtitle text-muted mb-2">
+              <%= blog.createdAt.toLocaleDateString() %>
+            </div>
+            <div class="card-text mb-2"><%= blog.category %></div>
+            <img class="card-img-top mt-2" src="<%= blog.img %> " alt="" />
+            <div class="card-text mb-2"><%= blog.description %></div>
+            <a
+        href="<%= blog.slug %>"
+        class="btn btn-dark text-center"
+        >Read More....</a
+      >
+      <a href="edit/<%= blog.id %>" class="btn btn-dark"
+        >Edit</a
+      >
+      <form
+        action="/blogs/<%= blog.id %>?_method=DELETE"
+        method="POST"
+        class="d-inline">
+        <button type="submit" class="btn btn-danger">Delete</button>
+      </form>
+        </div>
+        </div>
+
+   <% }) %>
+   
       </div>
 
-
    </div>
+   
     
-    <div class="py-5 text-center mt-4" style="background-color: black;color: white;">
+    <div class="py-5 text-center mt-5" style="background-color: black;color: white;">
         ©2022 Copyright
       </div>
 
