--- a/views/blogs/home.ejs
+++ b/views/blogs/home.ejs
@@ -22,7 +22,7 @@
         </div>
       </div>
       <h1 class="display-4 fw-bold mb-4 mt-5">FIVE MOST RECENT RECIPIES</h1>
-      <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+      <div class="row row-cols-2 row-cols-lg-3 row-cols-md-2 row-cols-xl-3 row-cols-sm-12 ">
         <% blog.forEach(function(blog, index){ %>
       
           <div class="card mt-4 text-center"  style="width:28rem;margin:10px;">
