--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -11,7 +11,7 @@
             <h1 class="mb-4">COOKING BLOG</h1>
             <a href="/blogs/new" class="btn btn-success center p-4">Add New recepie</a>
           </div>
-          <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
+          <div class="row row-cols-2 row-cols-lg-3 row-cols-md-2 row-cols-xl-3 row-cols-sm-12">
         <% blogs.forEach(blog =>
         {%>
           
